# bsr2

./: .gitignore  CMakeLists.txt  LICENSE
core/: CMakeLists.txt
core/include/bsr/: core.hpp
core/src/: core.cpp
core/tests/: CMakeLists.txt  test_parse.cpp
mac-ui/: CMakeLists.txt
mac-ui/src/: main.mm
win-ui/: CMakeLists.txt
win-ui/include/win_ui/: advanced_options_dialog.hpp  app_window.hpp  directory_card.hpp
win-ui/src/: advanced_options_dialog.cpp  app_window.cpp  directory_card.cpp  main.cpp
